methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:4: error: not found: value True
    case  True => avance();baisseBrosse();leveBosse()
          ^SlugHunting:4: error: not found: value leveBosse
    case  True => avance();baisseBrosse();leveBosse()
                                          ^