methods.slug.SlugHunting.scala.code
def hunt() {
	isFacingTrail() match{
    case  True => avance();baisseBrosse();leveBosse()
    case _ => gauche()
  }
}


def isFacingTrail():Boolean = {
  if(estFaceMur){
    return false
  }else{
  avance()
  if(getCouleurSol() == Color.green){
    recule()
    return true
  } else {
    recule()
    return false
  }
    
  }
}